# flask-nexus

./: .env  .gitignore  babel.json  main.py  modules.py  pyproject.toml  requirements.txt  routes.py  vercel-requirements.txt  vercel.json
.vercel/: project.json
api/: app.py  main.py
api/instance/: nexus.db
api/templates/: home.html  user.html
app/: app.py
app/models/: comments.py  posts.py  users.py
app/routes/: routes.py
app/static/: README.txt
app/static/css/: main.css
app/templates/: clean-b.html  creative-b.html  home.html  login.html  post-detail.html  random-b.html  register.html
app/templates/blocks/: base-log.html
instance/: nexus.db
templates/: boards.html  home.html  random-b.html
templates/blocks/: base.html
