[project]
name = "nexus"
version = "0.1.0"
description = "..."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "no"}
requires-python == "3.14.1"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-admin (>=2.0.2,<3.0.0)",
    "werkzeug (>=3.1.5,<4.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
